--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,14 @@ click==8.1.3
 clikit==0.6.2
 cmake==3.26.3
 colorama==0.4.4
+comm==0.1.4
 command-not-found==0.3
 coverage==7.2.5
 crashtest==0.3.1
 cryptography==3.4.8
 cupshelpers==1.0
 cycler==0.11.0
+dacite==1.8.1
 dataclasses-json==0.5.7
 dbus-python==1.2.18
 decorator==5.1.1
@@ -79,11 +81,13 @@ gyp==0.1
 h2==2.6.2
 hpack==3.0.0
 html5lib==1.1
+htmlmin==0.1.12
 httplib2==0.20.2
 huggingface-hub==0.14.1
 hyper==0.7.0
 hyperframe==3.2.0
 idna==3.4
+ImageHash==4.3.1
 imageio==2.28.1
 img2pdf==0.4.2
 importlab==0.8
@@ -95,7 +99,7 @@ intervaltree==3.1.0
 ipykernel==6.7.0
 ipython==8.13.1
 ipython_genutils==0.2.0
-ipywidgets==6.0.0
+ipywidgets==8.1.1
 isort==5.12.0
 jedi==0.18.2
 jeepney==0.7.1
@@ -105,6 +109,7 @@ jsonschema==3.2.0
 jupyter-client==7.1.2
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
+jupyterlab-widgets==3.0.9
 keyring==23.5.0
 kiwisolver==1.3.2
 langchain==0.0.245
@@ -139,6 +144,7 @@ more-itertools==8.10.0
 mpmath==1.3.0
 msgpack==1.0.3
 multidict==6.0.4
+multimethod==1.10
 multiprocess==0.70.14
 mypy==1.2.0
 mypy-extensions==1.0.0
@@ -153,7 +159,7 @@ ninja==1.11.1
 notebook==6.4.8
 numba==0.56.4
 numexpr==2.8.4
-numpy==1.24.3
+numpy==1.23.5
 nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-cupti-cu11==11.7.101
 nvidia-cuda-nvrtc-cu11==11.7.99
@@ -172,18 +178,21 @@ openapi-schema-pydantic==1.2.4
 opencv-python-headless==4.7.0.72
 packaging==23.1
 pandas==2.0.1
+pandas-profiling==3.6.6
 pandocfilters==1.5.0
 paramiko==2.9.3
 parso==0.8.3
 pastel==0.2.1
 pathspec==0.11.1
 pathtools==0.1.2
+patsy==0.5.3
 pbr==5.11.1
 pdfarranger==1.8.2
 pep8==1.7.1
 pep8-naming==0.10.0
 pexpect==4.8.0
 pfzy==0.3.4
+phik==0.12.3
 pickleshare==0.7.5
 pikepdf==5.0.1+dfsg
 Pillow==9.5.0
@@ -257,6 +266,7 @@ scikit-image==0.20.0
 scikit-learn==1.2.2
 scipy==1.10.1
 screen-resolution-extra==0.0.0
+seaborn==0.12.2
 SecretStorage==3.3.1
 Send2Trash==1.8.1b0
 sentry-sdk==1.20.0
@@ -273,10 +283,12 @@ SQLAlchemy==2.0.19
 ssh-import-id==5.11
 stack-data==0.6.2
 starlette==0.26.1
+statsmodels==0.14.0
 stevedore==5.0.0
 sympy==1.11.1
 systemd-python==234
 tabulate==0.9.0
+tangled-up-in-unicode==0.2.0
 tenacity==8.2.2
 terminado==0.13.1
 testpath==0.5.0
@@ -416,16 +428,19 @@ untokenize==0.1.1
 urllib3==1.26.15
 usb-creator==0.3.7
 virtualenv==20.22.0
+visions==0.7.5
 wadllib==1.3.6
 wandb==0.15.0
 wcwidth==0.2.6
 webencodings==0.5.1
 websocket-client==0.59.0
 wetransferpy==0.2.3
-widgetsnbextension==2.0.0
+widgetsnbextension==4.0.9
+wordcloud==1.9.2
 wrapt==1.15.0
 xdg==5
 xkit==0.0.0
 xxhash==3.2.0
 yarl==1.9.2
+ydata-profiling @ https://github.com/pandas-profiling/pandas-profiling/archive/master.zip#sha256=4fa36546cbd185011aa4da8e56d18ff03b6c96a67a2a7851e09eb9cdbc8d3b10
 zipp==1.0.0
