--- a/requirements.txt
+++ b/requirements.txt
@@ -1,446 +1,169 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-albumentations==1.3.0
-anyio==3.6.2
-appdirs==1.4.4
-apturl==0.5.2
-argon2-cffi==21.1.0
+altair==5.1.1
+anyio==4.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 arrow==1.2.3
-astroid==2.15.4
-asttokens==2.2.1
-async-timeout==4.0.2
+astroid==2.15.8
+asttokens==2.4.0
+async-lru==2.0.4
 attrs==23.1.0
-autopep8==2.0.2
-Babel==2.8.0
+Babel==2.12.1
 backcall==0.2.0
-bandit==1.7.5
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-black==22.12.0
-bleach==4.1.0
-blinker==1.4
-Brlapi==0.8.3
-Brotli==1.0.9
-build==0.10.0
-CacheControl==0.12.10
-cachy==0.3.0
-certifi==2022.12.7
-chardet==4.0.0
-charset-normalizer==3.1.0
-cleo==0.8.1
-click==8.1.3
-clikit==0.6.2
-cmake==3.26.3
-colorama==0.4.4
+beautifulsoup4==4.12.2
+bleach==6.0.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.7
 comm==0.1.4
-command-not-found==0.3
-coverage==7.2.5
-crashtest==0.3.1
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.11.0
+contourpy==1.1.1
+cycler==0.12.0
 dacite==1.8.1
-dataclasses-json==0.5.7
-dbus-python==1.2.18
+debugpy==1.8.0
 decorator==5.1.1
-defer==1.0.6
 defusedxml==0.7.1
-dill==0.3.6
-distlib==0.3.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-dnspython==2.4.1
-docformatter==1.6.2
-docker==6.0.1
-docker-compose==1.29.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.19
-dodgy==0.2.1
-duplicity==0.8.21
-entrypoints==0.4
-exceptiongroup==1.1.1
+dill==0.3.7
+exceptiongroup==1.1.3
 executing==1.2.0
-fastapi==0.95.1
-fasteners==0.14.1
-filelock==3.12.0
-flake8==6.0.0
-flake8-polyfill==1.0.2
-fonttools==4.29.1
-frozenlist==1.3.3
-fs==2.4.12
-fsspec==2023.5.0
-future==0.18.2
-gast==0.5.2
+fastjsonschema==2.18.0
+flake8==6.1.0
+fonttools==4.43.0
+fqdn==1.5.1
 gitdb==4.0.10
-GitPython==3.1.31
-greenlet==2.0.2
-gyp==0.1
-h2==2.6.2
-hpack==3.0.0
-html5lib==1.1
+GitPython==3.1.37
 htmlmin==0.1.12
-httplib2==0.20.2
-huggingface-hub==0.14.1
-hyper==0.7.0
-hyperframe==3.2.0
 idna==3.4
 ImageHash==4.3.1
-imageio==2.28.1
-img2pdf==0.4.2
-importlab==0.8
-importlib-metadata==4.6.4
-iniconfig==2.0.0
-inquirerpy==0.3.4
-install==1.3.5
-intervaltree==3.1.0
-ipykernel==6.7.0
-ipython==8.13.1
-ipython_genutils==0.2.0
-ipywidgets==8.1.1
+importlib-metadata==6.8.0
+ipykernel==6.25.2
+ipython==8.16.0
+ipython-genutils==0.2.0
+ipywidgets==6.0.0b6
+isoduration==20.11.0
 isort==5.12.0
-jedi==0.18.2
-jeepney==0.7.1
+jedi==0.19.0
 Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==3.2.0
-jupyter-client==7.1.2
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.1
+jupyter_core==5.3.2
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.6
+jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
-keyring==23.5.0
-kiwisolver==1.3.2
-langchain==0.0.245
-langsmith==0.0.15
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
+jupyterlab_server==2.25.0
+kiwisolver==1.4.5
 lazy-object-proxy==1.9.0
-lazy_loader==0.2
-libcst==0.4.9
-lit==16.0.1
-llvmlite==0.39.1
-lockfile==0.12.2
-logilab-common==1.8.2
-loguru==0.7.0
-louis==3.20.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.3
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.5.1
+llvmlite==0.41.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.6.3
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mdurl==0.1.2
-monotonic==1.6
-more-itertools==8.10.0
-mpmath==1.3.0
-msgpack==1.0.3
-multidict==6.0.4
-multimethod==1.10
-multiprocess==0.70.14
-mypy==1.2.0
-mypy-extensions==1.0.0
-nbclient==0.5.6
-nbconvert==6.4.0
-nbformat==5.1.3
-nbqa==1.7.0
-nest-asyncio==1.5.4
-netifaces==0.11.0
+mistune==3.0.1
+multimethod==1.9.1
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
 networkx==3.1
-ninja==1.11.1
-notebook==6.4.8
-numba==0.56.4
-numexpr==2.8.4
+notebook==7.0.4
+notebook_shim==0.2.3
+numba==0.58.0
 numpy==1.23.5
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.0
-olefile==0.46
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
-opencv-python-headless==4.7.0.72
+overrides==7.4.0
 packaging==23.1
-pandas==2.0.1
-pandas-profiling==3.6.6
+pandas==2.1.1
 pandocfilters==1.5.0
-paramiko==2.9.3
 parso==0.8.3
-pastel==0.2.1
-pathspec==0.11.1
-pathtools==0.1.2
 patsy==0.5.3
-pbr==5.11.1
-pdfarranger==1.8.2
-pep8==1.7.1
-pep8-naming==0.10.0
 pexpect==4.8.0
-pfzy==0.3.4
 phik==0.12.3
+pickle5==0.0.11
 pickleshare==0.7.5
-pikepdf==5.0.1+dfsg
-Pillow==9.5.0
-pinecone-client==2.2.2
-pipenv==2023.4.20
-pkginfo==1.8.2
-platformdirs==3.4.0
-pluggy==1.0.0
-ply==3.11
-poetry==1.1.12
-poetry-core==1.0.7
-poetry-semver==0.1.0
-prometheus-client==0.9.0
-prompt-toolkit==3.0.38
-prospector==1.9.0
-protobuf==4.22.3
+Pillow==10.0.1
+platformdirs==3.10.0
+prince==0.10.8
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+protobuf==4.24.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
-py==1.10.0
-pyarrow==12.0.0
-pycairo==1.20.1
-pycodestyle==2.10.0
-pycups==2.0.1
-pydantic==1.10.7
+pyarrow==13.0.0
+pycodestyle==2.11.0
+pycparser==2.21
+pydantic==1.10.13
+pydeck==0.8.1b0
 pydocstyle==6.3.0
-pydot==1.4.2
-pyflakes==3.0.1
-Pygments==2.15.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pylama==8.4.1
-pylev==1.2.0
-pylint==2.17.3
-pylint-celery==0.3
-pylint-django==2.5.3
-pylint-flask==0.6
-pylint-plugin-utils==0.7
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pypi-install==0.0.5
-pyproject_hooks==1.0.0
-pyre-extensions==0.0.30
-pyRFC3339==1.1
-pyroma==4.2
-pyrsistent==0.18.1
-pytest==7.3.1
-pytest-cov==4.0.0
-python-apt==2.4.0+ubuntu2
+pyflakes==3.1.0
+Pygments==2.16.1
+pylint==2.17.7
+pyparsing==3.1.1
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.0
-pythran==0.10.0
-pytoml==0.1.21
-pytype==2023.4.18
-pytz==2023.3
+python-json-logger==2.0.7
+pytz==2023.3.post1
 PyWavelets==1.4.1
-pyxdg==0.27
-PyYAML==6.0
-pyzmq==22.3.0
-qudida==0.0.4
-regex==2023.6.3
-reportlab==3.6.8
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.0
+referencing==0.30.2
 requests==2.28.2
-requests-toolbelt==1.0.0
-requirements-detector==1.1.0
-responses==0.18.0
-rich==13.3.4
-scikit-image==0.20.0
-scikit-learn==1.2.2
-scipy==1.10.1
-screen-resolution-extra==0.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.6.0
+rpds-py==0.10.3
+scikit-learn==1.3.1
+scipy==1.9.3
 seaborn==0.12.2
-SecretStorage==3.3.1
-Send2Trash==1.8.1b0
-sentry-sdk==1.20.0
-setoptconf-tmp==0.3.1
-setproctitle==1.3.2
-shellingham==1.4.0
+Send2Trash==1.8.2
 six==1.16.0
-smmap==5.0.0
+sklearn==0.0.post9
+smmap==5.0.1
 sniffio==1.3.0
 snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-SQLAlchemy==2.0.19
-ssh-import-id==5.11
+soupsieve==2.5
 stack-data==0.6.2
-starlette==0.26.1
-statsmodels==0.14.0
-stevedore==5.0.0
-sympy==1.11.1
-systemd-python==234
-tabulate==0.9.0
+statsmodels==0.13.5
+streamlit==1.27.1
 tangled-up-in-unicode==0.2.0
-tenacity==8.2.2
-terminado==0.13.1
-testpath==0.5.0
-TestSlide==2.7.1
-texttable==1.6.7
-threadpoolctl==3.1.0
-tifffile==2023.4.12
-tiktoken==0.4.0
-tokenize-rt==5.0.0
+tenacity==8.2.3
+terminado==0.17.1
+threadpoolctl==3.2.0
+tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
-tomlkit==0.11.7
-torch==2.0.0
-torchsummary==1.5.1
-torchvision==0.15.1
-tornado==6.1
-tox==3.21.4
-tqdm==4.65.0
-traitlets==5.9.0
-triton==2.0.0
-trove-classifiers==2023.3.9
-typed-ast==1.4.3
+tomlkit==0.12.1
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.64.1
+traitlets==5.10.1
 typeguard==2.13.3
-types-aiofiles==0.1
-types-annoy==1.17
-types-appdirs==1.4
-types-atomicwrites==1.4
-types-aws-xray-sdk==2.8
-types-babel==2.9
-types-backports-abc==0.5
-types-backports.ssl-match-hostname==3.7
-types-beautifulsoup4==4.10
-types-bleach==4.1
-types-boto==2.49
-types-braintree==4.11
-types-cachetools==4.2
-types-caldav==0.8
-types-certifi==2020.4
-types-characteristic==14.3
-types-chardet==4.0
-types-click==7.1
-types-click-spinner==0.1
-types-colorama==0.4
-types-commonmark==0.9
-types-contextvars==0.1
-types-croniter==1.0
-types-cryptography==3.3
-types-dataclasses==0.1
-types-dateparser==1.0
-types-DateTimeRange==0.1
-types-decorator==0.1
-types-Deprecated==1.2
-types-docopt==0.6
-types-docutils==0.17
-types-editdistance==0.5
-types-emoji==1.2
-types-entrypoints==0.3
-types-enum34==1.1
-types-filelock==3.2
-types-first==2.0
-types-Flask==1.1
-types-freezegun==1.1
-types-frozendict==0.1
-types-futures==3.3
-types-html5lib==1.1
-types-httplib2==0.19
-types-humanfriendly==9.2
-types-ipaddress==1.0
-types-itsdangerous==1.1
-types-JACK-Client==0.1
-types-Jinja2==2.11
-types-jmespath==0.10
-types-jsonschema==3.2
-types-Markdown==3.3
-types-MarkupSafe==1.1
-types-mock==4.0
-types-mypy-extensions==0.4
-types-mysqlclient==2.0
-types-oauthlib==3.1
-types-orjson==3.6
-types-paramiko==2.7
-types-Pillow==8.3
-types-polib==1.1
-types-prettytable==2.1
-types-protobuf==3.17
-types-psutil==5.8
-types-psycopg2==2.9
-types-pyaudio==0.2
-types-pycurl==0.1
-types-pyfarmhash==0.2
-types-Pygments==2.9
-types-PyMySQL==1.0
-types-pyOpenSSL==20.0
-types-pyRFC3339==0.1
-types-pysftp==0.2
-types-pytest-lazy-fixture==0.6
-types-python-dateutil==2.8
-types-python-gflags==3.1
-types-python-nmap==0.6
-types-python-slugify==5.0
-types-pytz==2021.1
-types-pyvmomi==7.0
-types-PyYAML==5.4
-types-redis==3.5
-types-requests==2.25
-types-retry==0.9
-types-selenium==3.141
-types-Send2Trash==1.8
-types-setuptools==57.4
-types-simplejson==3.17
-types-singledispatch==3.7
-types-six==1.16
-types-slumber==0.7
-types-stripe==2.59
-types-tabulate==0.8
-types-termcolor==1.1
-types-toml==0.10
-types-toposort==1.6
-types-ttkthemes==3.2
-types-typed-ast==1.4
-types-tzlocal==0.1
-types-ujson==0.1
-types-vobject==0.9
-types-waitress==0.1
-types-Werkzeug==1.0
-types-xxhash==2.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
+typing_extensions==4.8.0
 tzdata==2023.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-untokenize==0.1.1
-urllib3==1.26.15
-usb-creator==0.3.7
-virtualenv==20.22.0
+tzlocal==5.0.1
+uri-template==1.3.0
+urllib3==1.26.16
+validators==0.22.0
 visions==0.7.5
-wadllib==1.3.6
-wandb==0.15.0
-wcwidth==0.2.6
+watchdog==3.0.0
+wcwidth==0.2.7
+webcolors==1.13
 webencodings==0.5.1
-websocket-client==0.59.0
-wetransferpy==0.2.3
-widgetsnbextension==4.0.9
+websocket-client==1.6.3
+widgetsnbextension==2.0.1
 wordcloud==1.9.2
 wrapt==1.15.0
-xdg==5
-xkit==0.0.0
-xxhash==3.2.0
-yarl==1.9.2
-ydata-profiling @ https://github.com/pandas-profiling/pandas-profiling/archive/master.zip#sha256=4fa36546cbd185011aa4da8e56d18ff03b6c96a67a2a7851e09eb9cdbc8d3b10
-zipp==1.0.0
+zipp==3.17.0
