--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altair==5.1.1
+altair==4.2.2
 anyio==4.0.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -25,6 +25,7 @@ debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.7
+entrypoints==0.4
 exceptiongroup==1.1.3
 executing==1.2.0
 fastjsonschema==2.18.0
@@ -84,7 +85,7 @@ numba==0.58.0
 numpy==1.23.5
 overrides==7.4.0
 packaging==23.1
-pandas==2.1.1
+pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
@@ -94,7 +95,7 @@ pickle5==0.0.11
 pickleshare==0.7.5
 Pillow==10.0.1
 platformdirs==3.10.0
-prince==0.10.8
+prince==0.12.1
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 protobuf==4.24.3
@@ -120,7 +121,7 @@ pyzmq==25.1.1
 qtconsole==5.4.4
 QtPy==2.4.0
 referencing==0.30.2
-requests==2.28.2
+requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.6.0
