--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ htmlmin==0.1.12
 idna==3.4
 ImageHash==4.3.1
 importlib-metadata==6.8.0
+inotify==0.2.10
 ipykernel==6.25.2
 ipython==8.16.0
 ipython-genutils==0.2.0
@@ -79,6 +80,7 @@ nbconvert==7.8.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
 networkx==3.1
+nose==1.3.7
 notebook==7.0.4
 notebook_shim==0.2.3
 numba==0.58.0
