--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         run: python -m pip install --upgrade pip      
       - name: Install project requirements  
         run: python -m pip install -r requirements.txt
-      - name: Install black, pylint linters  
-        run: pip install pylint==v2.17.3
+      - name: Install black, pylint, pydocstyle linters  
+        run: pip install pylint==v2.17.7
       #- name: apply black linter black==22.3.0 
       #  run: black $(git ls-files '*.py')
       - name: apply pylint linter
